2014-05-30  Holger Seelig  <holger.seelig@yahoo.de>

	* BrowserWindow.cpp:
	* BrowserWindow.xml: 

2014-05-29  Holger Seelig  <holger.seelig@yahoo.de>

	* BrowserWindow.h:
	* BrowserWindow.cpp:
	* BrowserWindow.xml:
	* X3DBrowserEditor.cpp:
	* X3DOutlineTreeView.cpp: 

2014-05-29  Holger Seelig  <holger.seelig@yahoo.de>

	* BrowserWindow.cpp:
	* BrowserWindow.xml:
	* X3DBrowserWindowInterface.h:
	* X3DBrowserWindowInterface.cpp: 

2014-05-29  Holger Seelig  <holger.seelig@yahoo.de>

	* BrowserWindow.h:
	* BrowserWindow.cpp:
	* BrowserWindow.xml:
	* X3DBrowserEditor.h:
	* X3DBrowserEditor.cpp:
	* OutlineSelection.cpp:
	* OutlineTreeModel.cpp:
	* X3DBrowserWindowInterface.h:
	* X3DBrowserWindowInterface.cpp: 

2014-05-29  Holger Seelig  <holger.seelig@yahoo.de>

	* titania: 

2014-05-28  Holger Seelig  <holger.seelig@yahoo.de>

	* Makefile.am:
	* BrowserWindow.h:
	* BrowserWindow.cpp:
	* BrowserSelection.h:
	* BrowserSelection.cpp:
	* X3DBrowserSelection.h:
	* X3DBrowserSelection.cpp:
	* OutlineEditor.cpp: 

2014-05-27  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBrowserEditor.cpp: 

2014-05-27  Holger Seelig  <holger.seelig@yahoo.de>

	* MagicImport.cpp:
	* X3DBrowserEditor.h:
	* X3DBrowserEditor.cpp:
	* OutlineEditor.cpp:
	* OutlineDragDrop.cpp:
	* X3DOutlineTreeView.cpp:
	* OutlineTreeObserver.cpp: 

2014-05-27  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBrowserEditor.cpp: 

2014-05-26  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBrowserEditor.cpp:
	* OutlineEditor.cpp: 

2014-05-26  Holger Seelig  <holger.seelig@yahoo.de>

	* BrowserWindow.cpp:
	* X3DBrowserEditor.h:
	* X3DBrowserEditor.cpp:
	* OutlineEditor.cpp:
	* OutlineTreeData.h:
	* OutlineTreeModel.h:
	* OutlineTreeData.cpp:
	* OutlineDragDrop.cpp:
	* X3DOutlineTreeView.h:
	* OutlineTreeModel.cpp:
	* X3DOutlineTreeView.cpp: 

2014-05-26  Holger Seelig  <holger.seelig@yahoo.de>

	* date.wrl:
	* X3DBrowserWidget.cpp: 

2014-05-25  Holger Seelig  <holger.seelig@yahoo.de>

	* BrowserWindow.h: